--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav class="navbar"></nav>
     <header class="hero-section" style="background-color: #FFF9F3;">
         <div class="content" style="position: relative; background-color: #FFF9F3;">
-          <img src="img/img3.png" class="background-picture" alt="" style="width: 1451px;
-          height: 631px; margin-top: 250px;">
+          <img src="img/img3.png" class="background-picture" alt="" style="width: 100%;
+          height: auto; margin-top: 250px;">
           <img src="img/image.PNG" class="logo" alt="" style="position: absolute; top:130px; left: 580px; width: 260px; height: 244px;">
         </div>
         <style>
