--- a/consult.html
+++ b/consult.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/consult.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/nav.css">
   <style>
     .smaller-heading {
       font-size: 36px;
@@ -33,6 +34,7 @@
   </style>
 </head>
 <body style="background-color: #FFF9F3;">
+  <nav></nav>
   <header class="hero-section">
     <h2 class="smaller-heading" style="font-family: 'Alike'; font-weight: 400; color: #3F3329; margin-top: -350px;">Book a consultation</h2>
   </header>
