--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </header>
 
     <section class="homescreen" style=" background-color: #FFF9F3;">
-        <h2 class="description" id= "about" style="width: 1342px; height: 474px; margin-left: 50px; margin-top: 100px;
+        <h2 class="description" id= "about" style="width: 100%; height: auto; padding: 60px;
         font-family: 'Alike'; font-style: normal; font-weight: 400; font-size: 32px; line-height: 40px; text-align: justify;
         color: #3F3329;">Welcome to Wedding Planner, your premier destination for exceptional wedding planning services.
              At Wedding Planner, we understand that your wedding day is one of the most important moments in your life,
