--- a/index.html
+++ b/index.html
@@ -1,42 +1,33 @@
 <!DOCTYPE html>
-<html lang= "en">
+<html lang="en">
 <head>
-<meta charset = "UTF-8">
-<meta http-equiv = "X-UA-Compatible" content = "IE=edge">
-<meta name="viewport" content ="width=100%">
-<title> Wedding Planner </title>
-<link rel= "stylesheet" href="css/home.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wedding Planner</title>
+  <link rel="stylesheet" href="css/home.css">
 </head>
-<body style="background-color: #FFF9F3;">
-    <nav class="navbar"></nav>
-    <header class="hero-section" style="background-color: #FFF9F3;">
-        <div class="content" style="position: relative; background-color: #FFF9F3;">
-          <img src="img/img3.png" class="background-picture" alt="" style="width: 100%;
-          height: auto; margin-top: 250px;">
-          <img src="img/image.PNG" class="logo" alt="" style="position: absolute; top:130px; left: 580px; width: 260px; height: 244px;">
-        </div>
-        <style>
-            body {
-              background-color: #FFF9F3;
-              margin: 0;
-              padding: 0;
-            }
-          </style>
-      </header>
+<body>
+  <nav class="navbar"></nav>
+  <header class="hero-section">
+    <div class="content">
+      <img src="img/img3.png" class="background-picture" alt="">
+    </div>
+  </header>
 
-    <section class="homescreen" style=" background-color: #FFF9F3;">
-        <h2 class="description" id= "about" style="width: 100%; height: auto; padding: 60px;
-        font-family: 'Alike'; font-style: normal; font-weight: 400; font-size: 32px; line-height: 40px; text-align: justify;
-        color: #3F3329;">Welcome to Wedding Planner, your premier destination for exceptional wedding planning services.
-             At Wedding Planner, we understand that your wedding day is one of the most important moments in your life,
-              and we are dedicated to making it unforgettable. Our experienced team of wedding planners is passionate about 
-              creating bespoke, tailor-made weddings that reflect your unique style and personality. 
-              From intimate ceremonies to grand celebrations, we specialize in crafting unforgettable experiences that exceed 
-              your expectations. We take care of every detail, from venue selection to floral design, catering to entertainment,
-               so that you can relax and enjoy your special day with your loved ones. Whether you're looking for full-service
-                planning or day-of coordination, Wedding Planner is here to make your wedding dreams come true. 
-                Contact us today to start planning your perfect wedding!</h2>         
-    </section>
+  <section class="homescreen">
+    <h2 class="description" id="about">
+      Welcome to Wedding Planner, your premier destination for exceptional wedding planning services.
+      At Wedding Planner, we understand that your wedding day is one of the most important moments in your life,
+      and we are dedicated to making it unforgettable. Our experienced team of wedding planners is passionate about
+      creating bespoke, tailor-made weddings that reflect your unique style and personality.
+      From intimate ceremonies to grand celebrations, we specialize in crafting unforgettable experiences that exceed
+      your expectations. We take care of every detail, from venue selection to floral design, catering to entertainment,
+      so that you can relax and enjoy your special day with your loved ones. Whether you're looking for full-service
+      planning or day-of coordination, Wedding Planner is here to make your wedding dreams come true.
+      Contact us today to start planning your perfect wedding!
+    </h2>
+  </section>
     <section class="product" id="portfolio" style="background-color: #FFF9F3;">
         <h2 class="product-category" style="font-family: 'Alike';
         font-style: normal; font-weight: 400; font-size: 32px; line-height: 40px; color: #3F3329;">Beach Wedding</h2>
