--- a/schedule.html
+++ b/schedule.html
@@ -9,12 +9,11 @@
 <link rel="stylesheet" href="css/product.css">
 </head>
 <body style="background-color: #FFF9F3;">
-    <header class="hero-section" style="overflow: hidden;">
-        <div class="content" style="position: relative;">
-          <img src="img/image 19.png" class="background-picture" alt="" style="width: 1440px;
-          height: 631px; margin-top: 250px;">
-        </div>
-      </header>
+  <header class="hero-section">
+    <div class="content">
+      <img src="img/image 19.png" class="background-picture" alt="">
+    </div>
+  </header>
     <nav class="navbar"></nav>
     <section class="openning" style=" background-color: #FFF9F3;">
         <img src="img/Opening hours.png" class="logo1" alt="" style="margin-left: 600px;margin-top: 60px; width: 250px; height:auto; margin-bottom: 80px;">
