--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="navbar"></nav>
-  <header class="hero-section">
+  <header class="hero-section" style="justify-content: center; text-align: center;">
     <div class="content">
       <img src="img/img3.png" class="background-picture" alt="">
     </div>
