--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar"></nav>
   <header class="hero-section" style="justify-content: center; text-align: center;">
     <div class="content">
-      <img src="img/img3.png" class="background-picture" alt="">
+      <img src="img/img3.png" class="background-picture" alt="" style="width: 100%;">
     </div>
   </header>
 
@@ -28,7 +28,7 @@
       Contact us today to start planning your perfect wedding!
     </h2>
   </section>
-    <section class="product" id="portfolio" style="background-color: #FFF9F3;">
+    <section class="product" id="portfolio" style="background-color: #FFF9F3; width: 100%;">
         <h2 class="product-category" style="font-family: 'Alike';
         font-style: normal; font-weight: 400; font-size: 32px; line-height: 40px; color: #3F3329;">Beach Wedding</h2>
         <div class="product-container">
