--- a/product.html
+++ b/product.html
@@ -8,13 +8,14 @@
 <link rel="stylesheet" href="css/home.css">
 <link rel="stylesheet" href="css/product.css">
 </head>
-<body style="background-color: #FFF9F3;">
+<body>
+    <nav class="navbar"></nav>
     <header class="hero-section">
         <h2 style="font-family: 'Alike'; font-style: normal;font-weight: 400;font-size: 52px;line-height: 40px;
         text-align: center; color: #3F3329; margin-top: -350px;"> Wedding packs and services</h2>
 
       </header>
-    <nav class="navbar"></nav>
+    
     <section class="homescreen" style=" background-color: #FFF9F3;">
         <p class="description" style="width: 1342px; height: 474px; margin-left: 50px; top: 992px;
         font-family: 'Alike'; font-style: normal; font-weight: 400; font-size: 24px; line-height: 40px; text-align: justify;
