--- a/schedule.html
+++ b/schedule.html
@@ -8,13 +8,13 @@
 <link rel="stylesheet" href="css/home.css">
 <link rel="stylesheet" href="css/product.css">
 </head>
-<body style="background-color: #FFF9F3;">
+<body>
+  <nav class="navbar"></nav>
   <header class="hero-section">
     <div class="content">
       <img src="img/image 19.png" class="background-picture" alt="">
     </div>
   </header>
-    <nav class="navbar"></nav>
     <section class="openning" style=" background-color: #FFF9F3;">
         <img src="img/Opening hours.png" class="logo1" alt="" style="margin-left: 600px;margin-top: 60px; width: 250px; height:auto; margin-bottom: 80px;">
         <img src="img/open.png" class="open" alt="" style="width: 80px; height: auto; margin-left: -400px;">
