--- a/appointment.html
+++ b/appointment.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="css/appointment.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body style="background-color: #FFF9F3;">
+<body>
+  <nav class="navbar"></nav>
   <header class="hero-section">
     <h2 style="font-family: 'Alike'; font-style: normal;font-weight: 400;font-size: 52px;line-height: 40px;
         text-align: center; color: #3F3329; margin-top: -350px;">Book an appointment</h2>
@@ -21,8 +22,6 @@
     <h2 style="font-family: 'Alike';font-weight: 400;font-size: 40px;line-height: 40px;
         text-align: center; color: #3F3329; margin-top: -450px; margin-bottom: 70px;">Choose a time slot</h2>
   </div>
-
-  <nav class="navbar"></nav>
 
   <section class="available">
     <div class="oval-boxes">
