--- a/consult.html
+++ b/consult.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
-  <meta name="viewport" content ="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -12,7 +12,6 @@
 
   <title>Consult</title>
   <link rel="stylesheet" href="css/home.css">
-  <link rel="stylesheet" href="css/consult.css">
   <link rel="stylesheet" href="css/footer.css">
   <style>
     .smaller-heading {
@@ -38,7 +37,7 @@
   </style>
 </head>
 <body>
-  <nav class="navbar"></nav>
+  <nav class="navbar" style="height: 135px;"></nav>
   <header class="hero-section">
     <h2 class="smaller-heading" style="font-family: 'Alike'; font-weight: 400; color: #3F3329; margin-top: -350px;">Book a consultation</h2>
   </header>
@@ -63,7 +62,7 @@
         <div class="col-md-8 offset-md-2">
           <h2 class="smaller-heading" style="font-family: 'Alike'; font-weight: 400; color: #3F3329; margin-top: 100px;">Meet our coordinators</h2>
           <img src="img/people1.png" alt="" class="img-fluid" style="margin-top: 50px; margin-bottom: 140px;">
-          <img src="img/people2.png" alt="" class="img-fluid" style="margin-top: -100px;">
+          <img src="img/people2.png" alt="" class="img-fluid" style="margin-top: -100px; margin-bottom: 140px;">
         </div>
       </div>
     </div>
