--- a/appointment.html
+++ b/appointment.html
@@ -12,7 +12,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-  <nav class="navbar" style="height: 115px;"></nav>
+  <nav class="navbar"></nav>
   <header class="hero-section">
     <h2 style="font-family: 'Alike'; font-style: normal;font-weight: 400;font-size: 52px;line-height: 40px;
         text-align: center; color: #3F3329; margin-top: -350px;">Book an appointment</h2>
