--- a/consult.html
+++ b/consult.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body>
-  <nav class="navbar" style="height: 115px;"></nav>
+  <nav class="navbar"></nav>
   <header class="hero-section">
     <h2 class="smaller-heading" style="font-family: 'Alike'; font-weight: 400; color: #3F3329; margin-top: -350px;">Book a consultation</h2>
   </header>
