--- a/schedule.html
+++ b/schedule.html
@@ -16,12 +16,7 @@
     </div>
   </header>
     <section class="openning" style=" background-color: #FFF9F3;">
-        <img src="img/Opening hours.png" class="logo1" alt="" style="margin-left: 600px;margin-top: 60px; width: 250px; height:auto; margin-bottom: 80px;">
-        <img src="img/open.png" class="open" alt="" style="width: 80px; height: auto; margin-left: -400px;">
-        <img src="img/monday.png" class="logo3" alt="" style="margin-left: 450px;margin-top: 40px; width: 550px; height:auto;">
-        <img src="img/holiday.png" class="logo" alt="" style="margin-left: 550px;margin-top: 100px; width: 350px; height:auto;">
-        <img src="img/closed.png" class="logo" alt="" style="margin-left: 450px;margin-top: 70px; width: 550px; height:auto;">
-        <img src="img/office.png" class="logo" alt="" style="margin-left: 350px;margin-top: 150px; width: 850px; height:auto; margin-bottom: -250px;">
+        <img src="img/image45.png" class="logo1" alt="" style="padding: 80px;">
     </section>
     <footer style="margin-top: 300px;"></footer>
     <script src="js/nav.js"></script>
