--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@
     </div>
   </header>
     <section class="openning" style=" background-color: #FFF9F3;">
-        <img src="img/image45.png" class="logo1" alt="" style="padding: 80px;">
+        <img src="img/image45.png" class="logo1" alt="" style="padding: 80px; width: 85%;">
     </section>
     <footer style="margin-top: 300px;"></footer>
     <script src="js/nav.js"></script>
